<package>
  <name>octomap_msgs</name>
  <version>0.3.5</version>
  <description>
   This package provides messages and serializations / conversion for the <a href="http://octomap.github.io">OctoMap library</a>.    
  </description>

  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <license>BSD</license>  

  <url type="website">http://ros.org/wiki/octomap_msgs</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
